--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0a192f" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="丞东 - 全栈开发工程师，专注于React和React Native开发，跨文化产品设计与本地化"
     />
+    <meta name="keywords" content="丞东, 全栈开发, React, React Native, 前端开发, 移动应用开发, 个人简历" />
+    <meta property="og:title" content="丞东 | 全栈开发工程师" />
+    <meta property="og:description" content="专注于开发具有文化敏感性的移动应用和网站，以解决特定市场需求。" />
+    <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>丞东 | 全栈开发工程师</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>您需要启用JavaScript才能运行此应用。</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
